--- a/block/account/__edit-button/account__edit-button.css
+++ b/block/account/__edit-button/account__edit-button.css
@@ -1,25 +1,28 @@
-.profile-info__edit-button {
+.account__edit-button {
     width: 100%;
-    width: 24px;
+    max-width: 24px;
     height: 24px;
-
+    margin-top: 16px;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
     cursor: pointer;
     background: url(../../../../image/Edit\ Button.svg);
     background-size: cover;
-    margin-top: 16px;
+
     border: 1px solid #FFF;
 }
 
 @media (max-width: 745px) {
-    .profile-info__edit-button {
-        width: 18px;
-        height: 18px;
-
+    .account__edit-button {
+        max-width: 18px;
+        max-height: 18px;
         margin-top: 6px;
     }
 
 }
 
-.profile-info__edit-button:hover {
+
+
+.account__edit-button:hover {
     opacity: .6;
 }
