--- a/block/footer/footer.css
+++ b/block/footer/footer.css
@@ -3,15 +3,15 @@
     max-width: 880px;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-
     display: grid;
     justify-items: start;
-    margin-left: 40px;
+    padding-left: 40px;
     margin-bottom: 60px;
 }
 
-/* @media (max-width: 640px) {
+@media (max-width: 680px) {
     .footer {
         margin-bottom: 36px;
+        padding-left: 19px;
     }
-} */
+}
