--- a/block/logo/logo.css
+++ b/block/logo/logo.css
@@ -1,14 +1,18 @@
 .logo {
     width: 100%;
     max-width: 142px;
+    max-height: 33px;
     padding-bottom: 78px;
 
 }
 
-@media (max-width: 640px) {
+@media (max-width: 680px) {
     .logo {
         max-width: 104px;
-        padding-left: 27px;
+        max-height: 25px;
+        margin-left: 6px;
+        margin-top: 2px;
+        margin-bottom: 28px;
         padding-bottom: 28px;
     }
 }
