--- a/block/profile/__add-button/profile__add-button.css
+++ b/block/profile/__add-button/profile__add-button.css
@@ -9,22 +9,14 @@
     font-size: 44px;
     line-height: 44px;
     color: #FFF;
-    
     grid-column: 4 / 5;
-    display: -webkit-box;
-
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-
     flex-direction: row;
-    -webkit-box-pack: center;
-
     justify-content: center;
-    -webkit-box-align: center;
-
     align-items: center;
     cursor: pointer;
+    /*  border: 1px solid #fff; */
+    /* align-content: end; */
 }
 
 @media (max-width: 640px) {
