--- a/block/profile/__avatar/profile__avatar.css
+++ b/block/profile/__avatar/profile__avatar.css
@@ -1,11 +1,10 @@
 .profile__avatar {
     grid-column: 1 / 2;
     width: 120px;
-    -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    -o-object-fit: cover;
     object-fit: cover;
     border-radius: 50%;
+    border: 1px solid rgb(34, 255, 0);
     
 }
 
