--- a/block/root/root.css
+++ b/block/root/root.css
@@ -4,18 +4,13 @@
     margin: auto;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-
     display: grid;
-
     grid-template-columns: minmax(auto, 100%);
-
     grid-template-areas:
         "header"
         "main"
         "footer";
-
-    
     justify-items: center;
-
     align-content: center;
+    padding: 0 20px;
 }
