--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,9 @@
 
 @import url(../fonts/fonts.css);
 
+
+@import url(../block/_border/border.css);
+
 @import url(../block/body/body.css);
 
 @import url(../block/root/root.css);
@@ -14,17 +17,17 @@
 
 @import url(../block/main/main.css);
 
+@import url(../block/account/account.css);
+@import url(../block/account/__edit-button/account__edit-button.css);
+@import url(../block/account/__title/account__title.css);
+
 @import url(../block/profile/profile.css);
 @import url(../block/profile/__avatar/profile__avatar.css);
-
-@import url(../block/profile/profile-info/account/account.css);
-
-@import url(../block/profile/profile-info/profile-info.css);
-@import url(../block/profile/profile-info/__edit-button/profile-info__edit-button.css);
-@import url(../block/profile/profile-info/__title/profile-info__title.css);
-@import url(../block/profile/profile-info/__subtitle/profile-info__subtitle.css);
-
 @import url(../block/profile/__add-button/profile__add-button.css);
+
+@import url(../block/profile-info/profile-info.css);
+@import url(../block/profile-info/__subtitle/profile-info__subtitle.css);
+
 
 @import url(../block/elements/elements.css);
 @import url(../block/element/element.css);
@@ -39,13 +42,9 @@
 @import url(../block/footer/footer.css);
 @import url(../block/footer/__copyright/footer__copyright.css);
 
-
 @import url(../block/popup/popup.css);
+@import url(../block/popup/_opened/popup_opened.css);
 @import url(../block/popup/__body/popup__body.css);
-
-
-
-
 
 @import url(../block/form/form.css);
 @import url(../block/form/__close/form__close.css);
@@ -54,5 +53,3 @@
 @import url(../block/form/__input-container/form__input-container.css);
 @import url(../block/form/__item/form__item.css);
 @import url(..//block/form/__handlers/form__handlers.css);
-@import url(../block/form/__label/form__label.css);
-@import url(../block/form/__label/_profession/form__label_profession.css);
