--- a/block/body/body.css
+++ b/block/body/body.css
@@ -1,6 +1,6 @@
 .body {
     background: #000;
-    font-family: "Inter", sans-serif;
+    font-family: "Inter", "Arial", sans-serif;
     color: #FFF;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
