--- a/block/element/__like/element__like.css
+++ b/block/element/__like/element__like.css
@@ -7,6 +7,7 @@
     border: none;
     cursor: pointer;
     padding: 0 16px 0;
+    background: url(../../../../image/like_disabled.svg) no-repeat center;
 }
 
 .element__like:hover {
