--- a/block/element/__title/element__title.css
+++ b/block/element/__title/element__title.css
@@ -2,7 +2,8 @@
     padding: 0;
     margin: 0;
     font-size: 24px;
-    font-weight: bold;
+    line-height: calc(29/24);
+    font-weight: 900;
     -o-text-overflow: ellipsis;
     text-overflow: ellipsis;
     white-space: nowrap;
