--- a/block/footer/__copyright/footer__copyright.css
+++ b/block/footer/__copyright/footer__copyright.css
@@ -2,5 +2,13 @@
     margin: 0;
     padding: 0;
     font-size: 18px;
+    line-height: calc(22/18);
     font-weight: normal;
+}
+
+@media (max-width: 680px) {
+    .footer__copyright {
+        font-size: 14px;
+        line-height: calc(17/14);
+    }
 }
