--- a/block/form/__close/form__close.css
+++ b/block/form/__close/form__close.css
@@ -1,13 +1,21 @@
 .form__close {
+    width: 32px;
+    height: 32px;
     cursor: pointer;
     position: absolute;
     right: -40px;
     top: -40px;
+    background: url(../../../image/Close_Icon.svg) ;
+    background-size: cover;
+    border: none;
 }
 
 @media (max-width: 520px) {
     .form__close {
         right: 0;
+        top: -50;
+        width: 20px;
+        height: 20px;
     }
     
 }
