--- a/block/form/__handlers/form__handlers.css
+++ b/block/form/__handlers/form__handlers.css
@@ -4,10 +4,11 @@
     min-width: 238px;
     padding: 15px 0px 15px 0px;
     font-size: 18px;
+    line-height: calc(22/18);
     color: #FFF;
     background: #000;
     border: none;
-    border-radius: 4px;
+    border-radius: 2px;
     display: -webkit-box;
     display: flex;
     -webkit-box-orient: vertical;
@@ -16,15 +17,22 @@
     -webkit-box-align: center;
     align-items: center;
     margin-top: 48px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    cursor: pointer;
 }
 
-
-
-
+@media (max-width: 680px) {
+    .form__handlers {
+        font-size: 14px;
+        line-height: calc(17/14);
+       
+    }
+}
 
 .form__handlers:hover,
 .form__handlers:focus {
     opacity: 0.8;
-    -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
