--- a/block/form/__title/form__title.css
+++ b/block/form/__title/form__title.css
@@ -4,6 +4,7 @@
     width: 100%;
     max-width: 358px;
     font-size: 24px;
+    line-height: calc(29/24);
     font-weight: 900;
     margin-bottom: 37px;
     margin-top: 0px;
@@ -12,6 +13,8 @@
 @media (max-width: 520px) {
     .form__title {
         font-size: 18px;
+        line-height: calc(22/18);
+        margin-bottom: 60px;
     }
-    
+
 }
