--- a/block/form/form.css
+++ b/block/form/form.css
@@ -2,12 +2,10 @@
     width: 100%;
     max-width: 430px;
     height: 100%;
-    max-height: 330px;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     background: rgba(255, 255, 255);
     color: black;
-    border: 1px solid #FFF;
     border-radius: 10px;
     display: -webkit-box;
     display: flex;
@@ -20,5 +18,12 @@
     align-items: center;
     margin: 19px;
     position: relative;
-    padding: 34px 22px 42px;
+    padding: 34px 22px 33px;
+}
+
+@media (max-width: 320px) {
+    .form {
+        padding: 25px 22px 25px;
+    }
+
 }
