--- a/block/popup/popup.css
+++ b/block/popup/popup.css
@@ -2,6 +2,7 @@
     position: fixed;
     width: 100vw;
     height: 100vh;
-    background-color: #000000af;
+    background-color: rgba(0, 0, 0, .5);
+    ;
     display: none;
 }
