--- a/block/profile/__add-button/profile__add-button.css
+++ b/block/profile/__add-button/profile__add-button.css
@@ -10,6 +10,7 @@
     line-height: 44px;
     color: #FFF;
     grid-column: 4 / 5;
+    grid-row: 1 / span2;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -19,10 +20,12 @@
     /* align-content: end; */
 }
 
-@media (max-width: 640px) {
+@media (max-width: 745px) {
     .profile__add-button {
+        grid-column: 1 ;
+        grid-row: 4 ;
         width: 282px;
-        margin-bottom: 36px;
+        margin: 32px 2px 38px 0;
     }
 
 }
