--- a/block/profile/__avatar/profile__avatar.css
+++ b/block/profile/__avatar/profile__avatar.css
@@ -1,15 +1,16 @@
 .profile__avatar {
     grid-column: 1 / 2;
+    grid-row: span 2;
     width: 120px;
     box-sizing: border-box;
     object-fit: cover;
     border-radius: 50%;
-    border: 1px solid rgb(34, 255, 0);
-    
 }
 
-@media (max-width: 640px) {
+@media (max-width: 745px) {
     .profile__avatar {
+        grid-column: 1;
+        grid-row: 1 ;
         margin: 42px 0 26px;
     }
 
