--- a/block/form/__item/form__item.css
+++ b/block/form/__item/form__item.css
@@ -4,7 +4,7 @@
     border: 0;
     width: 100%;
     max-width: 358px;
-    height: 30px;
+    /* height: 30px; */
     font-size: 14px;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
     /* opacity: .2; */
@@ -12,7 +12,15 @@
     /* опускает строки ввода */
     padding-top: 5px;
     /* отодвигает border-bottom */
-    padding-bottom: 2px;    
+    padding-bottom: 10px;
+    margin-bottom: 6px;    
+}
+
+@media (max-width: 320px) {
+    .form__item {
+        /* margin-bottom: 0; */
+    }
+    
 }
 
 ::placeholder {
