--- a/block/popup/__body/popup__body.css
+++ b/block/popup/__body/popup__body.css
@@ -7,4 +7,6 @@
     align-items: center;
     -webkit-box-pack: center;
     justify-content: center;
+    -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
