--- a/block/profile/__add-button/profile__add-button.css
+++ b/block/profile/__add-button/profile__add-button.css
@@ -16,8 +16,8 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    /*  border: 1px solid #fff; */
-    /* align-content: end; */
+    background: url(../../../image/+.svg) no-repeat center;
+    background-size: 22px 22px;
 }
 
 @media (max-width: 745px) {
@@ -26,6 +26,7 @@
         grid-row: 4 ;
         width: 282px;
         margin: 32px 2px 38px 0;
+        background-size: 16px 16px;
     }
 
 }
