--- a/block/footer/__copyright/footer__copyright.css
+++ b/block/footer/__copyright/footer__copyright.css
@@ -4,6 +4,7 @@
     font-size: 18px;
     line-height: calc(22/18);
     font-weight: normal;
+    color: rgba(84, 84, 84, 1);
 }
 
 @media (max-width: 680px) {
