"Реализовано сохранение изменений профиля и создан попап для добавления карточек

--- a/block/popup-add/popup-add.css
+++ b/block/popup-add/popup-add.css
@@ -1,7 +1,7 @@
-.popup {
+.popup-add {
     position: fixed;
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, .5);
-    display: none;
+    visibility: hidden;
 }
