--- a/block/element/__mask-group/element__mask-group.css
+++ b/block/element/__mask-group/element__mask-group.css
@@ -1,5 +1,6 @@
 .element__mask-group {
     width: 100%;
+    height: 100%;
     border-top: 10px;
     -o-object-fit: cover;
     object-fit: cover;
