--- a/block/popup-edit/_opened/popup-edit_opened.css
+++ b/block/popup-edit/_opened/popup-edit_opened.css
@@ -1,9 +1,9 @@
 .popup-edit_opened {
-
+    opacity: 1;
     visibility: inherit;
-    transition: opacity .5s visibility 0s;
-    -moz-transition: opacity .5s visibility 0s;
-    -ms-transition: opacity .5s visibility 0s;
-    -o-transition: opacity .5s visibility 0s;
-    -webkit-transition: opacity .5s visibility 0s;
+    transition: opacity 1s ;
+    -moz-transition: opacity 1s ;
+    -ms-transition: opacity 1s ;
+    -o-transition: opacity 1s ;
+    -webkit-transition: opacity 1s ;
 }
