--- a/pages/index.css
+++ b/pages/index.css
@@ -27,6 +27,7 @@
 @import url(../block/element/__title/element__title.css);
 @import url(../block/element/__like/element__like.css);
 @import url(../block/element/__like/_active/element__like_active.css);
+@import url(../block/element/__trash/element__trash.css);
 
 @import url(../block/footer/footer.css);
 @import url(../block/footer/__copyright/footer__copyright.css);
@@ -38,6 +39,13 @@
 @import url(../block/popup-add/popup-add.css);
 @import url(../block/popup-add/_opened/popup-add_opened.css);
 @import url(../block/popup-add/__body/popup-add__body.css);
+
+@import url(../block/popup-pic/popup-pic.css);
+@import url(../block/popup-pic/__body/popup-pic__body.css);
+@import url(../block/popup-pic/__img/popup-pic__img.css);
+@import url(../block/popup-pic/__title/popup-pic__title.css);
+@import url(../block/popup-pic/_opened/popup-pic_opened.css);
+@import url(../block/popup-pic/__close/popup-pic__close.css);
 
 @import url(../block/form/form.css);
 @import url(../block/form/__close/form__close.css);
