--- a/block/popup/__body/popup__body.css
+++ b/block/popup/__body/popup__body.css
@@ -1,4 +1,4 @@
-.popup-edit__body {
+.popup__body {
     min-height: 100%;
     min-width: 100%;
     display: -webkit-box;
@@ -9,4 +9,8 @@
     justify-content: center;
     -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+/* start */
+    /* position: relative; */
+   /*  flex-direction: column;
+    align-items: center; */
 }
