--- a/block/form/__item/form__item.css
+++ b/block/form/__item/form__item.css
@@ -7,22 +7,17 @@
     /* height: 30px; */
     font-size: 14px;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
-    /* opacity: .2; */
     color: #000;
     /* опускает строки ввода */
     padding-top: 5px;
     /* отодвигает border-bottom */
     padding-bottom: 10px;
-    margin-bottom: 6px;    
+    margin-bottom: 6px;
+    position: relative;
 }
 
-@media (max-width: 320px) {
-    .form__item {
-        /* margin-bottom: 0; */
-    }
-    
-}
 
 ::placeholder {
     color: #000;
+    opacity: .4;
 }
