--- a/pages/index.css
+++ b/pages/index.css
@@ -51,3 +51,4 @@
 @import url(../block/form/__input-error/form__input-error.css);
 @import url(../block/form/__input-error/_active/form__input-error_active.css);
 @import url(..//block/form/__handlers/form__handlers.css);
+@import url(..//block/form/__handlers/_disabled/form__handlers_disabled.css);
