сверстан счетчик для лайков

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -28,6 +28,8 @@
 @import url(../../block/element/__like/element__like.css);
 @import url(../../block/element/__like/_active/element__like_active.css);
 @import url(../../block/element/__trash/element__trash.css);
+@import url(../../block/element/__like-group/element__like-group.css);
+@import url(../../block/element/__counter/element__counter.css);
 
 @import url(../../block/footer/footer.css);
 @import url(../../block/footer/__copyright/footer__copyright.css);
