--- a/block/profile/__avatar/profile__avatar.css
+++ b/block/profile/__avatar/profile__avatar.css
@@ -1,10 +1,19 @@
 .profile__avatar {
+    width: 100%;
+    height: 100%;
     grid-column: 1 / 2;
     grid-row: span 2;
     width: 120px;
     box-sizing: border-box;
     object-fit: cover;
     border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    background: url(../../../image/avatar.jpg) center;
+    background-size: 100%;
+    position: relative;
 }
 
 @media (max-width: 745px) {
@@ -15,3 +24,31 @@
     }
 
 }
+
+.profile__avatar::before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+
+.profile__avatar:hover::before {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.profile__avatar::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.profile__avatar:hover::after {
+    background: url(../../../image/button-avatar.svg) no-repeat center;
+}
+
