--- a/block/profile/__avatar/profile__avatar.css
+++ b/block/profile/__avatar/profile__avatar.css
@@ -1,17 +1,14 @@
 .profile__avatar {
-    width: 100%;
-    height: 100%;
+  /*   width: 116px;
+    height: 120px; */
     grid-column: 1 / 2;
     grid-row: span 2;
-    width: 120px;
+   /*  width: 120px; */
     box-sizing: border-box;
-    object-fit: cover;
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-    background: url(../../../image/avatar.jpg) center;
+    /* object-fit: cover;
+    border-radius: 50%; */
+    background-color: rgba(0, 0, 0, 1);
+    /* background: url(../../../image/avatar.jpg) center no-repeat; */
     background-size: 100%;
     position: relative;
 }
@@ -19,7 +16,7 @@
 @media (max-width: 745px) {
     .profile__avatar {
         grid-column: 1;
-        grid-row: 1 ;
+        grid-row: 1;
         margin: 42px 0 26px;
     }
 
@@ -51,4 +48,3 @@
 .profile__avatar:hover::after {
     background: url(../../../image/button-avatar.svg) no-repeat center;
 }
-
