--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -18,6 +18,7 @@
 @import url(../../block/profile/__title/profile__title.css);
 @import url(../../block/profile/__edit-button/profile__edit-button.css);
 @import url(../../block/profile/__subtitle/profile__subtitle.css);
+@import url(../../block/profile/__avatar-img/profile__avatar-img.css);
 
 @import url(../../block/elements/elements.css);
 
