весь функционал api

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -55,3 +55,6 @@
 @import url(../../block/form/__input-error/_active/form__input-error_active.css);
 @import url(../../block/form/__handlers/form__handlers.css);
 @import url(../../block/form/__handlers/_disabled/form__handlers_disabled.css);
+@import url(../../block/form/__handlers/_hidden/form__handlers_hidden.css);
+@import url(../../block/form/__conservation/form__conservation.css);
+@import url(../../block/form/__conservation/_visible/form__conservation_visible.css);
