реализованы замечания 2 итерации

--- a/block/profile/__avatar/profile__avatar.css
+++ b/block/profile/__avatar/profile__avatar.css
@@ -11,6 +11,7 @@
     /* background: url(../../../image/avatar.jpg) center no-repeat; */
     background-size: 100%;
     position: relative;
+    border: none;
 }
 
 @media (max-width: 745px) {
