--- a/block/profile/__avatar/profile__avatar.css
+++ b/block/profile/__avatar/profile__avatar.css
@@ -1,9 +1,9 @@
 .profile__avatar {
-  /*   width: 116px;
+    /*   width: 116px;
     height: 120px; */
     grid-column: 1 / 2;
     grid-row: span 2;
-   /*  width: 120px; */
+    /*  width: 120px; */
     box-sizing: border-box;
     /* object-fit: cover;
     border-radius: 50%; */
@@ -20,7 +20,6 @@
         grid-row: 1;
         margin: 42px 0 26px;
     }
-
 }
 
 .profile__avatar::before {
@@ -30,8 +29,8 @@
     position: absolute;
     top: 0;
     left: 0;
+    transition: .5s ease-in-out;
 }
-
 
 .profile__avatar:hover::before {
     background-color: rgba(0, 0, 0, 0.8);
@@ -42,11 +41,11 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 49.5px;
+    left: 53px;
     border: none;
 }
 
 .profile__avatar:hover::after {
-    background: url(../../../image/button-avatar.svg) no-repeat center;
+    background: url(../../../image/button-avatar.svg) no-repeat;
 }
